--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "🔱 𝐒𝐎𝐔𝐑𝐂𝐄 𝐙𝐄 🔱",
+    "name": "سورس علي احم",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
     "logo": "https://telegra.ph/file/41a777f089288f7ad2571.jpg",
     "keywords": [
